Closed
Bug 246750
Opened 21 years ago
Closed 21 years ago
Can't read menu/menuitem's "keyboard shortcut" and "accesskey"
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: Louie.Zhao, Assigned: Louie.Zhao)
Details
Attachments
(1 file)
|
2.43 KB,
patch
|
pkwarren
:
review+
Henry.Jia
:
superreview+
|
Details | Diff | Splinter Review |
Steps to Reproduce:
1. Start Mozilla and Gnopernicus.
2. Focus on File->Open File (Ctrl+O).
Bug Observation:
Gnopernicus can't read shortcut(Ctrl+O) and accesskey (O).
[using at-poke: the "Keybinding" of action is always empty.
| Assignee | ||
Comment 1•21 years ago
|
||
AT tools can't get keyBinding because "getKeyBindingCB" in
nsMaiInterfaceAction.cpp always return empty string. There is also another
potential bug. MaiInterfaceAction use nsString to store KeyBinding, but "return
NS_ConvertUCS2toUTF8(mKeyBinding).get()", which is a temporary buffer and may be
overwritten.
| Assignee | ||
Comment 2•21 years ago
|
||
Another issue about "AccessKey": GNOME applications (e.g. gedit) use "<Alt>x:x"
instead of <Alt>xx as part of keybinding string. Change mozilla to adopt this.
| Assignee | ||
Updated•21 years ago
|
Attachment #150781 -
Flags: review?(pkw)
Updated•21 years ago
|
Attachment #150781 -
Flags: review?(pkw) → review+
| Assignee | ||
Updated•21 years ago
|
Attachment #150781 -
Flags: superreview?(Henry.Jia)
Comment on attachment 150781 [details] [diff] [review]
patch v1
sr=Henry
Attachment #150781 -
Flags: superreview?(Henry.Jia) → superreview+
| Assignee | ||
Comment 4•21 years ago
|
||
Thanks for sr & r. Patch checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•