bug 246750 Can't read menu/menuitem's "keyboard shortcut" and "accesskey" r = pkw@us.ibm.com sr= henry.jia@sun.com